Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- Add 'All day' themes for use in nodes and calendar psuedo nodes.

Version 2.0 beta4
=================

- #270318 Get date browser and calendar navigation working correctly when used in a block.
- Don't attach any displays but the right one for a given argument.
- #289981, #290328 Fixing broken handling of empty blocks that sometimes kept calendars from displaying in blocks.
- Clean up logic for creating calendar fields info.
- #268669 Improve logic for splitting multi-day nodes across calendar dates, patch by emok.
- Add new DATE_FORMAT_DATE for date-only format that is used throughout the calendar.
- Make sure week title gets translated by using date_format_date() instead of date_format().
- #289775 Day link needs a leading zero.
- Make sure calendars have a min and max date even if the date argument is not the first argument.
- Tweaked the jcalendar popup html and css a bit to keep title from popping out of the box in some themes.
- Bring the 5.2 and 6.2 calendar themes into alignment so both use the same styles and themes, including tableless back/next navigation links and themeable headers.
- #285104 Make sure calendar_colors is always an array, needed for transition to new value.
- #283902 Make sure date_format() isn't used on items with no calendar dates.
- #284760 Don't make weekno a link when there is no week view, eliminate some redundant date_format() calls.
- #276421 Use farbtastic color picker to set calendar stripes, and start process of making stripes more customizable.
- #282777 Try to make calendar creation in PHP4 more efficient to speed up creation of year calendar.
- #279195 Remove deprecated calendar_week_range().
- Set min_date_date and max_date_date in the view object so calendar can be written.
- #278267 Add a theme for the jcalendar popup.