@@ -6,6 +6,7 @@ See documentation at http://drupal.org/node/262064.
 Version 2.0 dev
 =================
 
+- #272330 Rework css to add background colors where colors are defined and group colors together in the file.
 - Add 'All day' themes for use in nodes and calendar psuedo nodes.
 
 Version 2.0 beta4
